--- a/renovation-ideas.html
+++ b/renovation-ideas.html
@@ -401,15 +401,15 @@
           <!-- Project 1 - DP Originals -->
           <div class="project-card dp-original-banner">
             <div class="project-image-container">
-              <img src="assets/images/project/project-1-1.png" alt="Project 1" class="project-image" id="projectImage">
+              <img src="assets/images/project/project-1-1.png" alt="Project 1" class="project-image" id="projectImage1">
               <!-- Navigation buttons -->
-              <div class="project-swiper-button-prev" id="prevBtn">
+              <div class="project-swiper-button-prev" id="prevBtn1">
                 <svg width="8" height="10" viewBox="0 0 8 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M6.5 1L1.5 5L6.5 9" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
                     stroke-linejoin="round" />
                 </svg>
               </div>
-              <div class="project-swiper-button-next" id="nextBtn">
+              <div class="project-swiper-button-next" id="nextBtn1">
                 <svg width="8" height="10" viewBox="0 0 8 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M1.5 1L6.5 5L1.5 9" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
                     stroke-linejoin="round" />
