--- a/renovation-ideas.html
+++ b/renovation-ideas.html
@@ -625,42 +625,42 @@
               <div class="project-tag">Condo</div>
             </div>
           </div>
+
+          <div class="video-tour-card">
+            <div class="video-placeholder">
+              <img src="assets/images/project/project-video-1.png" alt="Video Tour 1" class="video-image">
+              <div class="video-play-icon">
+                <img src="assets/icons/youtube.svg" alt="Play Video" width="60" height="60">
+              </div>
+              <h5 class="video-title">Inside This Spacious 5-Room Home in Tiong...</h5>
+            </div>
+          </div>
+          <div class="video-tour-card">
+            <div class="video-placeholder">
+              <img src="assets/images/project/project-video-2.png" alt="Video Tour 2" class="video-image">
+              <div class="video-play-icon">
+                <img src="assets/icons/youtube.svg" alt="Play Video" width="60" height="60">
+              </div>
+              <h5 class="video-title">Modern Kitchen Transformation</h5>
+            </div>
+          </div>
+          <div class="video-tour-card">
+            <div class="video-placeholder">
+              <img src="assets/images/project/project-video-3.png" alt="Video Tour 3" class="video-image">
+              <div class="video-play-icon">
+                <img src="assets/icons/youtube.svg" alt="Play Video" width="60" height="60">
+              </div>
+              <h5 class="video-title">Luxury Condo Interior Design</h5>
+            </div>
+          </div>
+
         </div>
       </div>
 
-      <!-- Video Tours Section -->
-      <div class="video-tours-section">
-        <div class="video-tours-grid">
-          <div class="video-tour-card">
-            <div class="video-placeholder">
-              <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8 5V19L19 12L8 5Z" fill="currentColor" />
-              </svg>
-            </div>
-            <h4 class="video-title">Inside This Spacious 5-Room Home in Tiong...</h4>
-          </div>
-          <div class="video-tour-card">
-            <div class="video-placeholder">
-              <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8 5V19L19 12L8 5Z" fill="currentColor" />
-              </svg>
-            </div>
-            <h4 class="video-title">Modern Kitchen Transformation</h4>
-          </div>
-          <div class="video-tour-card">
-            <div class="video-placeholder">
-              <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8 5V19L19 12L8 5Z" fill="currentColor" />
-              </svg>
-            </div>
-            <h4 class="video-title">Luxury Condo Interior Design</h4>
-          </div>
-        </div>
-      </div>
 
       <!-- View More Button -->
       <div class="text-center mb-5">
-        <button class="btn btn-primary">View more</button>
+        <button class="btn btn-outline-primary">View more</button>
       </div>
 
       <!-- More Design Inspirations -->
