Renovation idea Completed Page

--- a/renovation-ideas.html
+++ b/renovation-ideas.html
@@ -401,7 +401,7 @@
           <!-- Project 1 - DP Originals -->
           <div class="project-card dp-original-banner">
             <div class="project-image-container">
-              <img src="assets/images/project/project-1-1.png" alt="Project 1" class="project-image" id="projectImage1">
+              <img src="assets/images/project/project-1-1.png" alt="Project 1" class="project-image" id="projectImage1" loading="lazy" decoding="async">
               <!-- Navigation buttons -->
               <div class="project-swiper-button-prev" id="prevBtn1">
                 <svg width="8" height="10" viewBox="0 0 8 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -439,7 +439,7 @@
           <!-- Project 2 -->
           <div class="project-card">
             <div class="project-image-container">
-              <img src="assets/images/project/project-1-2.png" alt="Project 2" class="project-image" id="projectImage2">
+              <img src="assets/images/project/project-1-2.png" alt="Project 2" class="project-image" id="projectImage2" loading="lazy" decoding="async">
               <!-- Navigation buttons -->
               <div class="project-swiper-button-prev" id="prevBtn2">
                 <svg width="8" height="10" viewBox="0 0 8 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -477,7 +477,7 @@
           <!-- Project 3 -->
           <div class="project-card">
             <div class="project-image-container">
-              <img src="assets/images/project/project-1-3.png" alt="Project 3" class="project-image" id="projectImage3">
+              <img src="assets/images/project/project-1-3.png" alt="Project 3" class="project-image" id="projectImage3" loading="lazy" decoding="async">
               <!-- Navigation buttons -->
               <div class="project-swiper-button-prev" id="prevBtn3">
                 <svg width="8" height="10" viewBox="0 0 8 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -515,7 +515,7 @@
           <!-- Project 4 -->
           <div class="project-card">
             <div class="project-image-container">
-              <img src="assets/images/project/project-1-4.png" alt="Project 4" class="project-image" id="projectImage4">
+              <img src="assets/images/project/project-1-4.png" alt="Project 4" class="project-image" id="projectImage4" loading="lazy" decoding="async">
               <!-- Navigation buttons -->
               <div class="project-swiper-button-prev" id="prevBtn4">
                 <svg width="8" height="10" viewBox="0 0 8 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -553,7 +553,7 @@
           <!-- Project 5 -->
           <div class="project-card">
             <div class="project-image-container">
-              <img src="assets/images/project/project-1-5.png" alt="Project 5" class="project-image" id="projectImage5">
+              <img src="assets/images/project/project-1-5.png" alt="Project 5" class="project-image" id="projectImage5" loading="lazy" decoding="async">
               <!-- Navigation buttons -->
               <div class="project-swiper-button-prev" id="prevBtn5">
                 <svg width="8" height="10" viewBox="0 0 8 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -591,7 +591,7 @@
           <!-- Project 6 -->
           <div class="project-card">
             <div class="project-image-container">
-              <img src="assets/images/project/project-1-6.png" alt="Project 6" class="project-image" id="projectImage6">
+              <img src="assets/images/project/project-1-6.png" alt="Project 6" class="project-image" id="projectImage6" loading="lazy" decoding="async">
               <!-- Navigation buttons -->
               <div class="project-swiper-button-prev" id="prevBtn6">
                 <svg width="8" height="10" viewBox="0 0 8 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -628,7 +628,7 @@
 
           <div class="video-tour-card">
             <div class="video-placeholder">
-              <img src="assets/images/project/project-video-1.png" alt="Video Tour 1" class="video-image">
+              <img src="assets/images/project/project-video-1.png" alt="Video Tour 1" class="video-image" loading="lazy" decoding="async">
               <div class="video-play-icon">
                 <img src="assets/icons/youtube.svg" alt="Play Video" width="60" height="60">
               </div>
@@ -637,7 +637,7 @@
           </div>
           <div class="video-tour-card">
             <div class="video-placeholder">
-              <img src="assets/images/project/project-video-2.png" alt="Video Tour 2" class="video-image">
+              <img src="assets/images/project/project-video-2.png" alt="Video Tour 2" class="video-image" loading="lazy" decoding="async">
               <div class="video-play-icon">
                 <img src="assets/icons/youtube.svg" alt="Play Video" width="60" height="60">
               </div>
@@ -646,7 +646,7 @@
           </div>
           <div class="video-tour-card">
             <div class="video-placeholder">
-              <img src="assets/images/project/project-video-3.png" alt="Video Tour 3" class="video-image">
+              <img src="assets/images/project/project-video-3.png" alt="Video Tour 3" class="video-image" loading="lazy" decoding="async">
               <div class="video-play-icon">
                 <img src="assets/icons/youtube.svg" alt="Play Video" width="60" height="60">
               </div>
@@ -659,13 +659,13 @@
 
 
       <!-- View More Button -->
-      <div class="text-center mb-5">
+      <div class="text-center py-3">
         <button class="btn btn-outline-primary">View more</button>
       </div>
 
       <!-- More Design Inspirations -->
       <div class="inspirations-section">
-        <h2 class="inspirations-title">More Design Inspirations</h2>
+        <h3 class="inspirations-title">More Design Inspirations</h3>
         <div class="inspirations-grid">
           <button class="inspiration-tag">Platform Bed</button>
           <button class="inspiration-tag">Loft Area</button>
