Search Text Added

--- a/renovation-ideas.html
+++ b/renovation-ideas.html
@@ -395,6 +395,13 @@
         </div>
       </div>
 
+      <!-- Search Results Section -->
+      <div class="search-results-section" id="searchResults" style="display: none;">
+        <h5 class="search-results-title">
+          You searched <span class="search-query">"Modern kitchen"</span> (45+ projects found)
+        </h5>
+      </div>
+
       <!-- Project Listings -->
       <div class="projects-section">
         <div class="projects-grid">
