--- a/renovation-ideas.html
+++ b/renovation-ideas.html
@@ -108,7 +108,7 @@
         <!-- Right Buttons -->
         <div class="d-flex gap-2">
           <a href="#enquire" class="btn btn-primary">Enquire</a>
-          <a href="#signin" class="btn btn-outline-primary">Sign In</a>
+          <a href="sign-in.html" class="btn btn-outline-primary">Sign In</a>
         </div>
       </div>
     </div>
