--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
     <div class="container">
       <!-- Logo -->
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="assets/brand/logo.png" alt="DesignPlus" height="48" loading="lazy" decoding="async">
       </a>
 
@@ -108,7 +108,7 @@
         <!-- Right Buttons -->
         <div class="d-flex gap-2">
           <a href="#enquire" class="btn btn-primary">Enquire</a>
-          <a href="#signin" class="btn btn-outline-primary">Sign In</a>
+          <a href="sign-in.html" class="btn btn-outline-primary">Sign In</a>
         </div>
       </div>
     </div>
