Career Page Updated

--- a/renovation-ideas.html
+++ b/renovation-ideas.html
@@ -776,7 +776,7 @@
             <ul class="footer-menu">
               <li><a href="#faqs" class="footer-link">FAQs</a></li>
               <li><a href="#contact" class="footer-link">Contact Us</a></li>
-              <li><a href="#career" class="footer-link">Career</a></li>
+              <li><a href="career.html" class="footer-link">Career</a></li>
               <li><a href="#onboarding" class="footer-link">Designer Onboarding</a></li>
             </ul>
           </div>
