--- a/career.html
+++ b/career.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sign in | Design Plus</title>
+  <title>Career | Design Plus</title>
 
   <!-- Fonts: Montserrat -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -114,119 +114,28 @@
     </div>
   </nav>
 
-    <!-- Sign In Section -->
-    <section class="signin-section">
-        <div class="container">
-            <div class="signin-content">
-                <div class="signin-image">
-                    <img src="assets/images/signin-img.jpg" alt="Modern Living Room" class="signin-img">
-                </div>
-                <div class="signin-form-container">
-                    <div class="signin-form">
-                        <h3 class="signin-title">Sign in</h3>
-                        <form class="form">
-                            <div class="form-group">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" id="email" class="form-input" placeholder="Enter email" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="form-label">Password</label>
-                                <input type="password" id="password" class="form-input" placeholder="Enter password" required>
-                                <a href="#" class="forgot-password" data-bs-toggle="modal" data-bs-target="#forgotPasswordModal">Forgot password?</a>
-                            </div>
-                            <button type="submit" class="btn btn-primary btn-large">Login</button>
-                        </form>
-                        <p class="signup-link">
-                            Don't have an account? <a href="#" class="signup-text" data-bs-toggle="modal" data-bs-target="#signupModal">Sign up</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+  <!-- Main Content -->
+  <main class="career-main">
+    <div class="container">
+      <!-- Breadcrumb -->
+      <h6 class="breadcrumb">
+        <a href="index.html">Home</a>
+        <span class="breadcrumb-separator">></span>
+        <span class="breadcrumb-current">Career</span>
+      </h6>
 
-  <!-- Forgot Password Modal -->
-  <div class="modal fade" id="forgotPasswordModal" tabindex="-1" aria-labelledby="forgotPasswordModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content forgot-password-modal-content">
-        <div class="modal-header forgot-password-modal-header">
-          <h3 class="modal-title forgot-password-modal-title" id="forgotPasswordModalLabel">Reset password</h3>
-          <button type="button" class="btn-close forgot-password-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body forgot-password-modal-body">
-          <form class="forgot-password-form">
-            <!-- Email Field -->
-            <div class="form-group">
-              <label for="forgotEmail" class="form-label">Your email*</label>
-              <input type="email" id="forgotEmail" class="form-input" placeholder="Enter email" required>
-            </div>
+      <!-- Page Title -->
+      <h2 class="career-title">Find the right one for you</h2>
 
-            <!-- Confirm Button -->
-            <button type="submit" class="btn btn-primary btn-large forgot-password-submit-btn">Confirm</button>
-          </form>
+      <!-- No Openings Content -->
+      <div class="no-openings-container">
+        <div class="no-openings-illustration">
+          <img src="assets/images/career-img.png" alt="No openings illustration" class="career-illustration" loading="lazy" decoding="async">
         </div>
+        <p class="no-openings-message">No openings at this moment.</p>
       </div>
     </div>
-  </div>
-
-  <!-- Sign Up Modal -->
-  <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content signup-modal-content">
-        <div class="modal-header signup-modal-header">
-          <h3 class="modal-title signup-modal-title" id="signupModalLabel">Sign up</h3>
-          <button type="button" class="btn-close signup-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body signup-modal-body">
-          <form class="signup-form">
-            <!-- User Type Selection -->
-            <div class="form-group">
-              <label class="form-label">I am a</label>
-              <div class="radio-group">
-                <div class="radio-item">
-                  <input type="radio" id="customer" name="userType" value="customer" checked>
-                  <label for="customer" class="radio-label">Customer</label>
-                </div>
-                <div class="radio-item">
-                  <input type="radio" id="supplier" name="userType" value="supplier">
-                  <label for="supplier" class="radio-label">Supplier</label>
-                </div>
-              </div>
-            </div>
-
-            <!-- Name Field -->
-            <div class="form-group">
-              <label for="signupName" class="form-label">Name*</label>
-              <input type="text" id="signupName" class="form-input" placeholder="Name" required>
-            </div>
-
-            <!-- Email Field -->
-            <div class="form-group">
-              <label for="signupEmail" class="form-label">Email*</label>
-              <input type="email" id="signupEmail" class="form-input" placeholder="Enter email" required>
-            </div>
-
-            <!-- Phone Number Field -->
-            <div class="form-group">
-              <label for="signupPhone" class="form-label">Phone number*</label>
-              <div class="phone-input-group">
-                <div class="country-code">
-                  <span class="country-code-text">+91</span>
-                  <svg class="dropdown-arrow" width="12" height="8" viewBox="0 0 12 8" fill="none">
-                    <path d="M1 1.5L6 6.5L11 1.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg>
-                </div>
-                <input type="tel" id="signupPhone" class="form-input phone-input" placeholder="Enter phone number" required>
-              </div>
-            </div>
-
-            <!-- Submit Button -->
-            <button type="submit" class="btn btn-primary btn-large signup-submit-btn">Sign up</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
+  </main>
 
   <!-- Footer -->
   <footer class="footer">
