Our Services Page Completed

--- a/renovation-ideas.html
+++ b/renovation-ideas.html
@@ -99,7 +99,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#about">About Us</a></li>
-              <li><a class="dropdown-item" href="#services">Our Services</a></li>
+              <li><a class="dropdown-item" href="our-services.html">Our Services</a></li>
               <li><a class="dropdown-item" href="#how-it-works">How It Works</a></li>
             </ul>
           </li>
@@ -727,7 +727,7 @@
             <h5 class="footer-section-title">Know us better</h5>
             <ul class="footer-menu">
               <li><a href="#about" class="footer-link">About Us</a></li>
-              <li><a href="#services" class="footer-link">Our Services</a></li>
+              <li><a href="our-services.html" class="footer-link">Our Services</a></li>
               <li><a href="#how-it-works" class="footer-link">How It Works</a></li>
             </ul>
           </div>
