--- a/renovation-ideas.html
+++ b/renovation-ideas.html
@@ -596,7 +596,7 @@
           </div>
 
           <!-- Project 6 -->
-          <div class="project-card">
+          <div class="project-card dp-original-banner">
             <div class="project-image-container">
               <img src="assets/images/project/project-1-6.png" alt="Project 6" class="project-image" id="projectImage6" loading="lazy" decoding="async">
               <!-- Navigation buttons -->
