--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@
                         </div>
                         <div class="contact-details">
                           <span class="contact-label">Send us an email</span>
-                          <span class="contact-value">askme@designplus.sg</span>
+                          <a href="mailto:askme@designplus.sg" class="contact-value">askme@designplus.sg</a>
                         </div>
                       </div>
 
@@ -1193,7 +1193,7 @@
                         </div>
                         <div class="contact-details">
                           <span class="contact-label">Give us a call</span>
-                          <span class="contact-value">+65 88082169</span>
+                          <a href="tel:+6588082169" class="contact-value">+65 88082169</a>
                         </div>
                       </div>
 
@@ -1300,25 +1300,25 @@
 
                   <div class="contact-info">
                     <div class="contact-info-left">
-                      <div class="contact-item">
-                        <div class="contact-icon">
-                          <img src="assets/icons/join-us/email.svg" alt="Email" class="icon">
-                        </div>
-                        <div class="contact-details">
-                          <span class="contact-label">Send us an email</span>
-                          <span class="contact-value">askme@designplus.sg</span>
-                        </div>
+                    <div class="contact-item">
+                      <div class="contact-icon">
+                        <img src="assets/icons/join-us/email.svg" alt="Email" class="icon">
                       </div>
+                      <div class="contact-details">
+                        <span class="contact-label">Send us an email</span>
+                        <a href="mailto:askme@designplus.sg" class="contact-value">askme@designplus.sg</a>
+                      </div>
+                    </div>
 
-                      <div class="contact-item">
-                        <div class="contact-icon">
-                          <img src="assets/icons/join-us/phone.svg" alt="Phone" class="icon">
-                        </div>
-                        <div class="contact-details">
-                          <span class="contact-label">Give us a call</span>
-                          <span class="contact-value">+65 88082169</span>
-                        </div>
+                    <div class="contact-item">
+                      <div class="contact-icon">
+                        <img src="assets/icons/join-us/phone.svg" alt="Phone" class="icon">
                       </div>
+                      <div class="contact-details">
+                        <span class="contact-label">Give us a call</span>
+                        <a href="tel:+6588082169" class="contact-value">+65 88082169</a>
+                      </div>
+                    </div>
 
                       <div class="contact-item">
                         <div class="contact-icon">
