--- a/index.html
+++ b/index.html
@@ -1147,7 +1147,7 @@
                     <div class="contact-info-left">
                       <div class="contact-item">
                         <div class="contact-icon">
-                          <img src="assets/icons/contact-us/Buildings 2.svg" alt="Company" class="icon">
+                          <img src="assets/icons/contact-us/company.svg" alt="Company" class="icon">
                         </div>
                         <div class="contact-details">
                           <span class="contact-label">Company</span>
