--- a/renovation-ideas.html
+++ b/renovation-ideas.html
@@ -437,7 +437,7 @@
                 <h5 class="project-title">Compact Chef</h3>
                   <p class="project-description">Compact kitchen spaces</p>
                   <div class="project-price">$4520</div>
-                  <a href="#" class="project-details-link">Check full details</a>
+                  <a href="project-details.html" class="project-details-link">Check full details</a>
               </div>
               <div class="project-tag">HDB</div>
             </div>
